--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "author": "ssj",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
-    "@material-ui/icons": "^4.9.1",
-    "axios": "^0.19.2",
-    "babel-polyfill": "^6.26.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.4",
+    "axios": "^0.27.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "history": "^4.10.1",
+    "history": "^5.3.0",
     "idempotent-babel-polyfill": "^7.4.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "reactjs-popup": "^1.5.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -27,23 +27,23 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
-    "clean-webpack-plugin": "^1.0.0",
-    "concurrently": "^4.1.2",
-    "css-loader": "^2.0.0",
-    "eslint": "^5.0.0",
-    "eslint-config-airbnb": "^17.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "concurrently": "^7.3.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.17.3",
-    "prettier": "^1.19.1",
-    "style-loader": "^0.23.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.1.3"
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   },
   "scripts": {
     "build": "webpack --mode production",
