--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.4",
+    "@mui/styles": "5.10.3",
     "axios": "^0.27.2",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "gh-pages": "^4.0.0",
     "history": "^5.3.0",
     "idempotent-babel-polyfill": "^7.4.4",
     "react": "^18.2.0",
@@ -48,7 +51,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "npm run build && node src/server/index.js",
-    "start:heroku": "node src/server/index.js",
+    "deploy": "gh-pages -d build", 
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
     "dev": "concurrently --kill-others \"npm run server\" \"npm run client\""
